Fix spacing

--- a/src/components/TechStack/TechStack.scss
+++ b/src/components/TechStack/TechStack.scss
@@ -7,7 +7,7 @@
     text-transform: uppercase;
     display: flex;
     flex-direction: column;
-    margin-top: 1rem;
+    margin-top: .3rem;
     margin-bottom: 3rem;
   }
 }
